--- a/accordion/package.json
+++ b/accordion/package.json
@@ -16,6 +16,7 @@
     "copy-webpack-plugin": "^9.1.0",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
+    "follow-redirects": "^1.14.7",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.4.1",
     "ts-loader": "^9.2.6",
