--- a/image/package.json
+++ b/image/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "feature",
+  "name": "@hiroiku/image-feature-detector",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/image-feature-detector.js",
+  "files": [
+    "./dist/"
+  ],
   "scripts": {
     "build": "webpack --mode production",
     "start": "webpack serve --mode development"
@@ -10,12 +13,17 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.1.0",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
+    "follow-redirects": "^1.14.7",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.4.1",
     "ts-loader": "^9.2.6",
