--- a/image/package.json
+++ b/image/package.json
@@ -25,6 +25,7 @@
     "eslint-config-prettier": "^8.3.0",
     "follow-redirects": "^1.14.7",
     "html-webpack-plugin": "^5.5.0",
+    "node-forge": "^1.2.1",
     "prettier": "^2.4.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
